--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -237,7 +237,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
+   "id": "fc1d31a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.4986879681898865,\n",
+       " -0.9692458866527737,\n",
+       " -0.35609585247318715,\n",
+       " -0.7618333706773945)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x, y = [x for x in graph.edges()][0]\n",
+    "\n",
+    "x0, y0 = pos[x]\n",
+    "x1, y1 = pos[y]\n",
+    "\n",
+    "x0, y0, x1, y1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "de7896b8",
    "metadata": {},
    "outputs": [],
@@ -246,27 +275,19 @@
     "edge_y = []\n",
     "for edge in graph.edges():\n",
     "    x, y = edge\n",
-    "\n",
     "    x0, y0 = pos[x]\n",
     "    x1, y1 = pos[y]\n",
-    "\n",
-    "\n",
-    "\n",
-    "    x0=pos_graph_fly[edge[0]][0]\n",
-    "    y0=pos_graph_fly[edge[0]][1]\n",
-    "    x1=pos_graph_fly[edge[1]][0]\n",
-    "    y1=pos_graph_fly[edge[1]][1]\n",
     "    edge_x.append(x0)\n",
     "    edge_x.append(x1)\n",
-    "    edge_x.append(None)\n",
     "    edge_y.append(y0)\n",
     "    edge_y.append(y1)\n",
-    "    edge_y.append(None)\n",
+    "\n",
     "edge_trace = go.Scatter(\n",
     "    x=edge_x, y=edge_y,\n",
     "    line=dict(width=0.5, color='#888'),\n",
     "    hoverinfo='none',\n",
-    "    mode='lines')"
+    "    mode='lines'\n",
+    "    )"
    ]
   },
   {
@@ -278,8 +299,8 @@
    "source": [
     "node_x = []\n",
     "node_y = []\n",
-    "for node in graph_fly.nodes():\n",
-    "    x, y =pos_graph_fly[node][0],pos_graph_fly[node][1]\n",
+    "for node in graph.nodes():\n",
+    "    x, y =pos[node][0],pos[node][1]\n",
     "    node_x.append(x)\n",
     "    node_y.append(y)\n",
     "\n",
