--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -216,56 +216,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "d16f321d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('F46F6.1', 'K11E4.4'), ('F31E3.1', 'Y54E10BR.4'), ('F55A4.5', 'T01C3.6')]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[x for x in graph.edges()][:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "fc1d31a2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-0.4986879681898865,\n",
-       " -0.9692458866527737,\n",
-       " -0.35609585247318715,\n",
-       " -0.7618333706773945)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x, y = [x for x in graph.edges()][0]\n",
-    "\n",
-    "x0, y0 = pos[x]\n",
-    "x1, y1 = pos[y]\n",
-    "\n",
-    "x0, y0, x1, y1"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "id": "de7896b8",
    "metadata": {},
@@ -288,6 +238,78 @@
     "    hoverinfo='none',\n",
     "    mode='lines'\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "57132b95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['F46F6.1',\n",
+       " 'F31E3.1',\n",
+       " 'F55A4.5',\n",
+       " 'Y74C9A.5',\n",
+       " 'Y37E3.7',\n",
+       " 'T10H9.4',\n",
+       " 'B0348.4',\n",
+       " 'F26A3.2',\n",
+       " 'C56C10.1',\n",
+       " 'F45H11.2',\n",
+       " 'F35B3.5',\n",
+       " 'D1046.1',\n",
+       " 'K02D10.1',\n",
+       " 'F28B12.3',\n",
+       " 'F09E5.5',\n",
+       " 'Y54E10BR.4',\n",
+       " 'F43G9.5',\n",
+       " 'M04B2.4',\n",
+       " 'C43E11.11',\n",
+       " 'C06H2.1',\n",
+       " 'F36H1.2',\n",
+       " 'F56F11.4',\n",
+       " 'T22C1.10',\n",
+       " 'F43H9.2',\n",
+       " 'C02F4.2',\n",
+       " 'F09E10.8',\n",
+       " 'T01C3.6',\n",
+       " 'C34C6.4',\n",
+       " 'T25G12.4',\n",
+       " 'B0495.7',\n",
+       " 'F55D10.3',\n",
+       " 'F43E2.2',\n",
+       " 'R08C7.3',\n",
+       " 'B0464.7',\n",
+       " 'C07G1.4',\n",
+       " 'B0205.3',\n",
+       " 'Y40B1B.7',\n",
+       " 'ZK256.1',\n",
+       " 'C09G12.9',\n",
+       " 'Y49E10.1',\n",
+       " 'Y48A5A.2',\n",
+       " 'K11E4.4',\n",
+       " 'W06B4.3',\n",
+       " 'M03D4.4',\n",
+       " 'C08F8.1',\n",
+       " 'Y53C12B.2']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x for x in graph.nodes()]\n",
+    "\n",
+    "# x, y\n",
+    "# x0, y0 = pos[x]\n",
+    "# x1, y1 = pos[y]\n",
+    "\n",
+    "# x0, y0, x1, y1"
    ]
   },
   {
