--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -390,7 +390,7 @@
     }
    ],
    "source": [
-    "centrality_measures[]"
+    "[result for result in centrality_measures if result.algorithm_name == \"degree_centrality\"][0].centrality"
    ]
   },
   {
