--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -392,23 +392,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "0c85606e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "plotly.graph_objs.scatter._marker.Marker"
+       "plotly.graph_objs._scatter.Scatter"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(node_trace.marker)"
+    "type(node_trace)"
    ]
   },
   {
