Work in progress

--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -385,7 +385,7 @@
     "\n",
     "for node in graph.nodes():\n",
     "    node_degree_centrality.append(degree_centrality_graph[node])\n",
-    "    node_text.append('# of degrees: '+ str(degree_centrality_graph[node]))\n",
+    "    node_text.append(f\"{node}\\n# of degrees:  {str(degree_centrality_graph[node])}\")\n",
     "node_trace.marker.color = node_degree_centrality\n",
     "node_trace.text = node_text"
    ]
