--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -387,6 +387,8 @@
     "    node_degree_centrality.append(degree_centrality_graph[node])\n",
     "    node_text.append(f\"Node: '{node}'\\n# of degrees: {str(degree_centrality_graph[node])}\")\n",
     "node_trace.marker.color = node_degree_centrality\n",
+    "node_trace.marker.cmax = max(node_degree_centrality)\n",
+    "node_trace.marker.cmin = min(node_degree_centrality)\n",
     "node_trace.text = node_text"
    ]
   },
