--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "27d6a4d0",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "0c85606e",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "plotly.graph_objs._scatter.Scatter"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "f5bcf8d1",
    "metadata": {},
    "outputs": [
@@ -546,6 +546,8 @@
         {
          "hoverinfo": "text",
          "marker": {
+          "cmax": 0.5294117647058824,
+          "cmin": 0.058823529411764705,
           "color": [
            0.058823529411764705,
            0.058823529411764705,
@@ -621,24 +623,24 @@
          },
          "mode": "markers",
          "text": [
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.1764705882352941",
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.11764705882352941",
-          "# of degrees: 0.1764705882352941",
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.5294117647058824",
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.058823529411764705",
-          "# of degrees: 0.23529411764705882",
-          "# of degrees: 0.058823529411764705"
+          "Node: 'C02D5.3'\n# of degrees: 0.058823529411764705",
+          "Node: 'C29E4.7'\n# of degrees: 0.058823529411764705",
+          "Node: 'C08F8.8'\n# of degrees: 0.1764705882352941",
+          "Node: 'K02F3.5'\n# of degrees: 0.058823529411764705",
+          "Node: 'C34C6.5'\n# of degrees: 0.11764705882352941",
+          "Node: 'ZK686.4'\n# of degrees: 0.1764705882352941",
+          "Node: 'ZC518.2'\n# of degrees: 0.058823529411764705",
+          "Node: 'W02D3.11'\n# of degrees: 0.058823529411764705",
+          "Node: 'C09D4.5'\n# of degrees: 0.058823529411764705",
+          "Node: 'VC5.4'\n# of degrees: 0.5294117647058824",
+          "Node: 'F55C5.8'\n# of degrees: 0.058823529411764705",
+          "Node: 'C13F10.7'\n# of degrees: 0.058823529411764705",
+          "Node: 'F45E1.6'\n# of degrees: 0.058823529411764705",
+          "Node: 'C06A5.11'\n# of degrees: 0.058823529411764705",
+          "Node: 'C02D5.4'\n# of degrees: 0.058823529411764705",
+          "Node: 'F13A7.10'\n# of degrees: 0.058823529411764705",
+          "Node: 'F32E10.4'\n# of degrees: 0.23529411764705882",
+          "Node: 'F20D1.9'\n# of degrees: 0.058823529411764705"
          ],
          "type": "scatter",
          "x": [
