--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -394,6 +394,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "fa90a5da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_network_graph(graph: nx.Graph, centrality_result: CentralityAlgorithmOutput) -> None:\n",
+    "    \"\"\"\n",
+    "    P\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "0c85606e",
    "metadata": {},
