--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -319,10 +319,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "c03c82ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'C02D5.3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [24], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m node_y \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m graph\u001b[38;5;241m.\u001b[39mnodes():\n\u001b[0;32m----> 4\u001b[0m     x, y \u001b[38;5;241m=\u001b[39m pos[node][\u001b[38;5;241m0\u001b[39m], pos[node][\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m      5\u001b[0m     node_x\u001b[38;5;241m.\u001b[39mappend(x)\n\u001b[1;32m      6\u001b[0m     node_y\u001b[38;5;241m.\u001b[39mappend(y)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'C02D5.3'"
+     ]
+    }
+   ],
    "source": [
     "node_x = []\n",
     "node_y = []\n",
@@ -341,7 +353,7 @@
     "        #'Greys' | 'YlGnBu' | 'Greens' | 'YlOrRd' | 'Bluered' | 'RdBu' |\n",
     "        #'Reds' | 'Blues' | 'Picnic' | 'Rainbow' | 'Portland' | 'Jet' |\n",
     "        #'Hot' | 'Blackbody' | 'Earth' | 'Electric' | 'Viridis' |\n",
-    "        colorscale='YlGnBu',\n",
+    "        colorscale='YlOrRd',\n",
     "        reversescale=True,\n",
     "        color=[],\n",
     "        size=10,\n",
@@ -401,7 +413,69 @@
    "source": [
     "def plot_network_graph(graph: nx.Graph, centrality_result: CentralityAlgorithmOutput) -> None:\n",
     "    \"\"\"\n",
-    "    P\n",
+    "    Plot the network graph\n",
+    "    \"\"\"\n",
+    "    pos = nx.spring_layout(graph)\n",
+    "    edge_x = []\n",
+    "    edge_y = []\n",
+    "    for edge in graph.edges():\n",
+    "        x, y = edge\n",
+    "        x0, y0 = pos[x]\n",
+    "        x1, y1 = pos[y]\n",
+    "        edge_x.append(x0)\n",
+    "        edge_x.append(x1)\n",
+    "        edge_y.append(y0)\n",
+    "        edge_y.append(y1)\n",
+    "\n",
+    "    edge_trace = go.Scatter(\n",
+    "        x=edge_x, y=edge_y,\n",
+    "        line=dict(width=0.5, color='#888'),\n",
+    "        hoverinfo='none',\n",
+    "        mode='lines'\n",
+    "        )\n",
+    "\n",
+    "    node_x = []\n",
+    "    node_y = []\n",
+    "    for node in graph.nodes():\n",
+    "        x, y = pos[node][0], pos[node][1]\n",
+    "        node_x.append(x)\n",
+    "        node_y.append(y)\n",
+    "\n",
+    "    node_trace = go.Scatter(\n",
+    "        x=node_x, y=node_y,\n",
+    "        mode='markers',\n",
+    "        hoverinfo='text',\n",
+    "        marker=dict(\n",
+    "            showscale=True,\n",
+    "            # colorscale options\n",
+    "            #'Greys' | 'YlGnBu' | 'Greens' | 'YlOrRd' | 'Bluered' | 'RdBu' |\n",
+    "            #'Reds' | 'Blues' | 'Picnic' | 'Rainbow' | 'Portland' | 'Jet' |\n",
+    "            #'Hot' | 'Blackbody' | 'Earth' | 'Electric' | 'Viridis' |\n",
+    "            colorscale='YlGnBu',\n",
+    "            reversescale=True,\n",
+    "            color=[],\n",
+    "            size=10,\n",
+    "            colorbar=dict(\n",
+    "                thickness=15,\n",
+    "                title='Node Connections',\n",
+    "                xanchor='left',\n",
+    "                titleside='right'\n",
+    "            ),\n",
+    "            line_width=2))\n",
+    "\n",
+    "    node_degree_centrality = []\n",
+    "    node_text = []\n",
+    "\n",
+    "    for node in graph.nodes():\n",
+    "        node_degree_centrality.append(centrality_result.result[node])\n",
+    "        node_text.append(f\"Node: '{node}'\\n# of degrees: {str(centrality_result.result[node])}\")\n",
+    "    node_trace.marker.color = node_degree_centrality\n",
+    "    node_trace.marker.cmax = max(node_degree_centrality)\n",
+    "    node_trace.marker.cmin = min(node_degree_centrality)\n",
+    "    node_trace.text = node_text\n",
+    "\n",
+    "    fig = go.Figure(data=[edge_trace, node_trace],\n",
+    "             layout=go.Layout(\n",
     "    \"\"\""
    ]
   },
