--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -416,8 +416,8 @@
     "    Plot the network graph\n",
     "    \"\"\"\n",
     "    pos = nx.spring_layout(graph)\n",
-    "    edge_x = []\n",
-    "    edge_y = []\n",
+    "    edge_x, node_x, edge_y, node_y = [], [], [], []\n",
+    "    \n",
     "    for edge in graph.edges():\n",
     "        x, y = edge\n",
     "        x0, y0 = pos[x]\n",
@@ -426,6 +426,12 @@
     "        edge_x.append(x1)\n",
     "        edge_y.append(y0)\n",
     "        edge_y.append(y1)\n",
+    "\n",
+    "    for node in graph.nodes():\n",
+    "        x, y = pos[node][0], pos[node][1]\n",
+    "        node_x.append(x)\n",
+    "        node_y.append(y)\n",
+    "    \n",
     "\n",
     "    edge_trace = go.Scatter(\n",
     "        x=edge_x, y=edge_y,\n",
@@ -436,10 +442,6 @@
     "\n",
     "    node_x = []\n",
     "    node_y = []\n",
-    "    for node in graph.nodes():\n",
-    "        x, y = pos[node][0], pos[node][1]\n",
-    "        node_x.append(x)\n",
-    "        node_y.append(y)\n",
     "\n",
     "    node_trace = go.Scatter(\n",
     "        x=node_x, y=node_y,\n",
