--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -438,7 +438,7 @@
     "        hoverinfo='none',\n",
     "        mode='lines'\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    node_trace = go.Scatter(\n",
     "        x=node_x, y=node_y,\n",
     "        mode='markers',\n",
@@ -449,7 +449,7 @@
     "            #'Greys' | 'YlGnBu' | 'Greens' | 'YlOrRd' | 'Bluered' | 'RdBu' |\n",
     "            #'Reds' | 'Blues' | 'Picnic' | 'Rainbow' | 'Portland' | 'Jet' |\n",
     "            #'Hot' | 'Blackbody' | 'Earth' | 'Electric' | 'Viridis' |\n",
-    "            colorscale='YlGnBu',\n",
+    "            colorscale='YlOrRd',\n",
     "            reversescale=True,\n",
     "            color=[],\n",
     "            size=10,\n",
