--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -460,16 +460,16 @@
     "                titleside='right'\n",
     "            ),\n",
     "            line_width=2))\n",
-    "\n",
-    "    node_degree_centrality = []\n",
+    "    \n",
+    "    node_centrality = []\n",
     "    node_text = []\n",
     "\n",
     "    for node in graph.nodes():\n",
-    "        node_degree_centrality.append(centrality_result.result[node])\n",
+    "        node_centrality.append(centrality_result.result[node])\n",
     "        node_text.append(f\"Node: '{node}'\\n# of degrees: {str(centrality_result.result[node])}\")\n",
-    "    node_trace.marker.color = node_degree_centrality\n",
-    "    node_trace.marker.cmax = max(node_degree_centrality)\n",
-    "    node_trace.marker.cmin = min(node_degree_centrality)\n",
+    "    node_trace.marker.color = node_centrality\n",
+    "    node_trace.marker.cmax = max(node_centrality)\n",
+    "    node_trace.marker.cmin = min(node_centrality)\n",
     "    node_trace.text = node_text\n",
     "\n",
     "    fig = go.Figure(data=[edge_trace, node_trace],\n",
