--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -466,7 +466,7 @@
     "\n",
     "    for node in graph.nodes():\n",
     "        node_centrality.append(centrality_result.result[node])\n",
-    "        node_text.append(f\"Node: '{node}'\\n# of degrees: {str(centrality_result.result[node])}\")\n",
+    "        node_text.append(f\"Node: '{node}'\\n{convert_to_normal(centrality_result.name)}: {str(centrality_result.result[node])}\")\n",
     "    node_trace.marker.color = node_centrality\n",
     "    node_trace.marker.cmax = max(node_centrality)\n",
     "    node_trace.marker.cmin = min(node_centrality)\n",
