--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -474,8 +474,17 @@
     "    node_trace.text = node_text\n",
     "\n",
     "    fig = go.Figure(data=[edge_trace, node_trace],\n",
-    "             layout=go.Layout(\n",
-    "    \"\"\""
+    "                    layout=go.Layout(\n",
+    "                        title=f'<br>Network graph for {convert_to_normal(centrality_result.name)}',\n",
+    "                        titlefont_size=16,\n",
+    "                        showlegend=False,\n",
+    "                        hovermode='closest',\n",
+    "                        margin=dict(b=20, l=5, r=5, t=40),\n",
+    "                        xaxis=dict(showgrid=False, zeroline=False, showticklabels=False),\n",
+    "                        yaxis=dict(showgrid=False, zeroline=False, showticklabels=False))\n",
+    "                    )\n",
+    "    fig.show()\n",
+    "\n"
    ]
   },
   {
