--- a/src/lab1/src/notebooks/explore_algorithms.ipynb
+++ b/src/lab1/src/notebooks/explore_algorithms.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "fa90a5da",
    "metadata": {},
    "outputs": [],
@@ -475,7 +475,7 @@
     "\n",
     "    fig = go.Figure(data=[edge_trace, node_trace],\n",
     "                    layout=go.Layout(\n",
-    "                        title=f'<br>Network graph for {convert_to_normal(centrality_result.name)}',\n",
+    "                        title=f'<br>Output for \"{convert_to_normal(centrality_result.name)}\"',\n",
     "                        titlefont_size=16,\n",
     "                        showlegend=False,\n",
     "                        hovermode='closest',\n",
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "0de8bdf6",
    "metadata": {},
    "outputs": [
@@ -508,102 +508,102 @@
          "mode": "lines",
          "type": "scatter",
          "x": [
-          -0.5890130310029482,
-          -0.41168517578408464,
-          -0.9345182270766922,
-          -0.41168517578408464,
-          0.6960572419824755,
-          0.9465880079856431,
-          0.6960572419824755,
-          0.13515811475797687,
-          0.6960572419824755,
-          1,
-          0.16505800741145762,
-          0.13515811475797687,
-          0.16505800741145762,
-          0.17137709950660768,
-          0.46146267730589857,
-          0.580992717718921,
-          0.46146267730589857,
-          0.7282087845227136,
-          0.46146267730589857,
-          0.13515811475797687,
-          -0.678054450313019,
-          -0.41168517578408464,
-          -0.41168517578408464,
-          -0.3798134982362258,
-          -0.41168517578408464,
-          -0.23083813730632036,
-          -0.41168517578408464,
-          -0.3907478860023883,
-          -0.41168517578408464,
-          0.13515811475797687,
-          -0.41168517578408464,
-          -0.579120923240925,
-          -0.41168517578408464,
-          -0.6911113222290907
+          -0.16296551357005684,
+          -0.3026729634211634,
+          -0.5731850972663599,
+          -0.3026729634211634,
+          0.6534570256794987,
+          0.8913499557439405,
+          0.6534570256794987,
+          0.07421035870184335,
+          0.6534570256794987,
+          0.9999999999999999,
+          -0.06348726428263608,
+          0.07421035870184335,
+          -0.06348726428263608,
+          -0.22642136813271707,
+          0.2959868325953268,
+          0.3414511413101974,
+          0.2959868325953268,
+          0.5128316614515265,
+          0.2959868325953268,
+          0.07421035870184335,
+          -0.339661751343087,
+          -0.3026729634211634,
+          -0.3026729634211634,
+          -0.36130586945483667,
+          -0.3026729634211634,
+          -0.5148984170544608,
+          -0.3026729634211634,
+          -0.07377642194330777,
+          -0.3026729634211634,
+          0.07421035870184335,
+          -0.3026729634211634,
+          -0.605370820862011,
+          -0.3026729634211634,
+          -0.5455414881516959
          ],
          "y": [
-          0.0993533611457159,
-          -0.1515782283151054,
-          -0.17135958075411228,
-          -0.1515782283151054,
-          0.37872635415177386,
-          0.4222464528655637,
-          0.37872635415177386,
-          0.03755796828313064,
-          0.37872635415177386,
-          0.6945151893720433,
-          0.38443952569030143,
-          0.03755796828313064,
-          0.38443952569030143,
-          0.7985711923458318,
-          -0.2321281081462208,
-          -0.4868665888946901,
-          -0.2321281081462208,
-          -0.3147997422006101,
-          -0.2321281081462208,
-          0.03755796828313064,
-          -0.28165675246358807,
-          -0.1515782283151054,
-          -0.1515782283151054,
-          0.09955498594652751,
-          -0.1515782283151054,
-          -0.3235515765033882,
-          -0.1515782283151054,
-          -0.4582136408175362,
-          -0.1515782283151054,
-          0.03755796828313064,
-          -0.1515782283151054,
-          -0.4317618706938808,
-          -0.1515782283151054,
-          -0.06304894101175433
+          -0.4906133555613981,
+          -0.23869167890914333,
+          -0.6390701227067553,
+          -0.23869167890914333,
+          -0.010645479359845996,
+          0.01867851365514322,
+          -0.010645479359845996,
+          0.13913243540869027,
+          -0.010645479359845996,
+          -0.2161945150815831,
+          0.444574695516284,
+          0.13913243540869027,
+          0.444574695516284,
+          0.7988738921046403,
+          0.4676701912738824,
+          0.7258503938970718,
+          0.4676701912738824,
+          0.6075995244330236,
+          0.4676701912738824,
+          0.13913243540869027,
+          -0.5168293612737009,
+          -0.23869167890914333,
+          -0.23869167890914333,
+          -0.02538903417476617,
+          -0.23869167890914333,
+          -0.4050717264016511,
+          -0.23869167890914333,
+          -0.31383986340882886,
+          -0.23869167890914333,
+          0.13913243540869027,
+          -0.23869167890914333,
+          -0.25646421938552066,
+          -0.23869167890914333,
+          -0.08957029002554327
          ]
         },
         {
          "hoverinfo": "text",
          "marker": {
-          "cmax": 0.5294117647058824,
-          "cmin": 0.058823529411764705,
+          "cmax": 0.3529411764705882,
+          "cmin": 0,
           "color": [
            0.058823529411764705,
            0.058823529411764705,
            0.1764705882352941,
-           0.058823529411764705,
+           0,
            0.11764705882352941,
            0.1764705882352941,
+           0,
            0.058823529411764705,
-           0.058823529411764705,
-           0.058823529411764705,
-           0.5294117647058824,
-           0.058823529411764705,
-           0.058823529411764705,
-           0.058823529411764705,
-           0.058823529411764705,
-           0.058823529411764705,
-           0.058823529411764705,
-           0.23529411764705882,
-           0.058823529411764705
+           0,
+           0.3529411764705882,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0,
+           0
           ],
           "colorbar": {
            "thickness": 15,
@@ -660,65 +660,65 @@
          },
          "mode": "markers",
          "text": [
-          "Node: 'C02D5.3'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'C29E4.7'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'C08F8.8'\tDegree Centrality: 0.1764705882352941",
-          "Node: 'K02F3.5'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'C34C6.5'\tDegree Centrality: 0.11764705882352941",
-          "Node: 'ZK686.4'\tDegree Centrality: 0.1764705882352941",
-          "Node: 'ZC518.2'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'W02D3.11'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'C09D4.5'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'VC5.4'\tDegree Centrality: 0.5294117647058824",
-          "Node: 'F55C5.8'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'C13F10.7'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'F45E1.6'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'C06A5.11'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'C02D5.4'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'F13A7.10'\tDegree Centrality: 0.058823529411764705",
-          "Node: 'F32E10.4'\tDegree Centrality: 0.23529411764705882",
-          "Node: 'F20D1.9'\tDegree Centrality: 0.058823529411764705"
+          "Node: 'C02D5.3'     Out Degree Centrality: 0.058823529411764705",
+          "Node: 'C29E4.7'     Out Degree Centrality: 0.058823529411764705",
+          "Node: 'C08F8.8'     Out Degree Centrality: 0.1764705882352941",
+          "Node: 'K02F3.5'     Out Degree Centrality: 0.0",
+          "Node: 'C34C6.5'     Out Degree Centrality: 0.11764705882352941",
+          "Node: 'ZK686.4'     Out Degree Centrality: 0.1764705882352941",
+          "Node: 'ZC518.2'     Out Degree Centrality: 0.0",
+          "Node: 'W02D3.11'     Out Degree Centrality: 0.058823529411764705",
+          "Node: 'C09D4.5'     Out Degree Centrality: 0.0",
+          "Node: 'VC5.4'     Out Degree Centrality: 0.3529411764705882",
+          "Node: 'F55C5.8'     Out Degree Centrality: 0.0",
+          "Node: 'C13F10.7'     Out Degree Centrality: 0.0",
+          "Node: 'F45E1.6'     Out Degree Centrality: 0.0",
+          "Node: 'C06A5.11'     Out Degree Centrality: 0.0",
+          "Node: 'C02D5.4'     Out Degree Centrality: 0.0",
+          "Node: 'F13A7.10'     Out Degree Centrality: 0.0",
+          "Node: 'F32E10.4'     Out Degree Centrality: 0.0",
+          "Node: 'F20D1.9'     Out Degree Centrality: 0.0"
          ],
          "type": "scatter",
          "x": [
-          -0.5890130310029482,
-          -0.9345182270766922,
-          0.6960572419824755,
-          1,
-          0.16505800741145762,
-          0.46146267730589857,
-          0.17137709950660768,
-          -0.678054450313019,
-          0.7282087845227136,
-          -0.41168517578408464,
-          -0.6911113222290907,
-          -0.23083813730632036,
-          -0.579120923240925,
-          0.580992717718921,
-          -0.3798134982362258,
-          -0.3907478860023883,
-          0.13515811475797687,
-          0.9465880079856431
+          -0.16296551357005684,
+          -0.5731850972663599,
+          0.6534570256794987,
+          0.9999999999999999,
+          -0.06348726428263608,
+          0.2959868325953268,
+          -0.22642136813271707,
+          -0.339661751343087,
+          0.5128316614515265,
+          -0.3026729634211634,
+          -0.5455414881516959,
+          -0.5148984170544608,
+          -0.605370820862011,
+          0.3414511413101974,
+          -0.36130586945483667,
+          -0.07377642194330777,
+          0.07421035870184335,
+          0.8913499557439405
          ],
          "y": [
-          0.0993533611457159,
-          -0.17135958075411228,
-          0.37872635415177386,
-          0.6945151893720433,
-          0.38443952569030143,
-          -0.2321281081462208,
-          0.7985711923458318,
-          -0.28165675246358807,
-          -0.3147997422006101,
-          -0.1515782283151054,
-          -0.06304894101175433,
-          -0.3235515765033882,
-          -0.4317618706938808,
-          -0.4868665888946901,
-          0.09955498594652751,
-          -0.4582136408175362,
-          0.03755796828313064,
-          0.4222464528655637
+          -0.4906133555613981,
+          -0.6390701227067553,
+          -0.010645479359845996,
+          -0.2161945150815831,
+          0.444574695516284,
+          0.4676701912738824,
+          0.7988738921046403,
+          -0.5168293612737009,
+          0.6075995244330236,
+          -0.23869167890914333,
+          -0.08957029002554327,
+          -0.4050717264016511,
+          -0.25646421938552066,
+          0.7258503938970718,
+          -0.02538903417476617,
+          -0.31383986340882886,
+          0.13913243540869027,
+          0.01867851365514322
          ]
         }
        ],
@@ -1551,7 +1551,7 @@
          "font": {
           "size": 16
          },
-         "text": "<br>Network graph for Degree Centrality"
+         "text": "<br>Network graph for Out Degree Centrality"
         },
         "xaxis": {
          "showgrid": false,
@@ -1571,7 +1571,7 @@
     }
    ],
    "source": [
-    "plot_network_graph(graph, centrality_measures[0])"
+    "plot_network_graph(graph, centrality_measures[2])"
    ]
   },
   {
